Add Operator Role to roles when set role get called