@@ -25,7 +25,7 @@ public class OperatorKey implements IRoleAuthorizable<Role> {
         this.created = created;
         this.disabled = disabled;
         this.siteId = null;
-        this.roles = new HashSet<>(Arrays.asList(Role.OPERATOR));
+        this.roles = Set.of(Role.OPERATOR);
     }
     public OperatorKey(String key, String name, String contact, String protocol, long created, boolean disabled, Integer siteId) {
         this.key = key;
@@ -62,9 +62,12 @@ public class OperatorKey implements IRoleAuthorizable<Role> {
 
     public Integer getSiteId() { return siteId; }
     public void setSiteId(Integer siteId) { this.siteId = siteId; }
-    public void setRoles(Set<Role> roles) { this.roles = roles; }
-    public OperatorKey withRoles(Set<Role> roles) { this.roles = Collections.unmodifiableSet(roles); return this; }
-    public OperatorKey withRoles(Role... roles) { this.roles = Set.of(roles); return this; }
+    public void setRoles(Set<Role> roles) {
+        roles.add(Role.OPERATOR);
+        this.roles = roles;
+    }
+    public OperatorKey withRoles(Set<Role> roles) { setRoles(roles); return this; }
+    public OperatorKey withRoles(Role... roles) { setRoles(Set.of(roles)); return this; }
     public static OperatorKey valueOf(JsonObject json) {
         return new OperatorKey(
                 json.getString("key"),
